--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,31 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background-color: green;
+}
+.card {
+  border-radius: 2rem;
+  background-color: whitesmoke;
+  width: 25rem;
+  height: 40rem;
+  margin: 1rem 0rem 0rem 20rem;
+}
+
+.left {
+  margin-top: 0;
+  font-size: 4rem;
+  color: red;
+}
+.center {
+  display: flex;
+  justify-content: center;
+  margin-top: 6rem;
+  font-size: 10rem;
+}
+
+.right {
+  display: flex;
+  justify-content: right;
+  margin-top: 5rem;
+  font-size: 4rem;
+  color: red;
+}
